' Generated by UML Generator
' Encoded: lLHDQy904BtdL-mnrWyyzH3Qec2XGcq5fIs8b4qojOF9HdOtGYl-z-x4xAuQePVIIvXzy_NUx4u6IdEfopmBr1h5XakUioJZIWsrbXYN6iP98MRu3QmVV68AB46PP104LHHxvQWb66CNCDRTS97mDJmKfO89Y39YqpE4eb8K80_kaJK9xvfFsnOCVw_LOPSgjQZAHgBGT0fR4TiMc5Ri78WQyeYHEJQM3TbRKQxMGLLUnocVGl3EZ4vZicUJuTlxU7u_cKNCD62tx9hSeinZaCyVTUR1qtSwNO-m8ipJb093mNE8sCpCNgoCFb29n8t6GdXm2oimbuRSO75HPC15XnbjYKbCYpBEm6jkcr3BMT4ix66nz78jTb1xpA2whIO7WY-mg6ViUJYnjiCVoQk5FPbYfCcH8d3aQvxwKBsuokJnf2bjIWq8hfcxuPm_kiQJ64h9lnvHwHkhyixfFa_-txk-nEpaqkUWz4ZY5YfHRVUWSuuYv7AbB975ycX7tCfVTRlD_Jxn-lLsSAztvxV8Bnf5ExWny-BOEm2HcX_M3m
' URL: http://www.plantuml.com/plantuml/uml/lLHDQy904BtdL-mnrWyyzH3Qec2XGcq5fIs8b4qojOF9HdOtGYl-z-x4xAuQePVIIvXzy_NUx4u6IdEfopmBr1h5XakUioJZIWsrbXYN6iP98MRu3QmVV68AB46PP104LHHxvQWb66CNCDRTS97mDJmKfO89Y39YqpE4eb8K80_kaJK9xvfFsnOCVw_LOPSgjQZAHgBGT0fR4TiMc5Ri78WQyeYHEJQM3TbRKQxMGLLUnocVGl3EZ4vZicUJuTlxU7u_cKNCD62tx9hSeinZaCyVTUR1qtSwNO-m8ipJb093mNE8sCpCNgoCFb29n8t6GdXm2oimbuRSO75HPC15XnbjYKbCYpBEm6jkcr3BMT4ix66nz78jTb1xpA2whIO7WY-mg6ViUJYnjiCVoQk5FPbYfCcH8d3aQvxwKBsuokJnf2bjIWq8hfcxuPm_kiQJ64h9lnvHwHkhyixfFa_-txk-nEpaqkUWz4ZY5YfHRVUWSuuYv7AbB975ycX7tCfVTRlD_Jxn-lLsSAztvxV8Bnf5ExWny-BOEm2HcX_M3m
' Generated on: 2025-12-17T00:07:25.449970

@startuml
skinparam classAttributeIconSize 0
hide circle

class Waitress {
  -pancakeHouseMenu: PancakeHouseMenu
  -dinerMenu: DinerMenu
  --
  +Waitress(pancakeHouseMenu: PancakeHouseMenu, dinerMenu: DinerMenu)
  +printMenu(): void
  -printMenu(item: MenuItem): void
}

class DinerMenu {
  -menuItems: MenuItem
  -{static} MAX_ITEMS: int = 6
  -numberOfItems: int = 0
  --
  +DinerMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +getMenuItems(): MenuItem[]
}

class MenuItem {
  -name: String
  -description: String
  -vegetarian: boolean
  -price: double
  --
  +MenuItem(name: String, description: String, vegetarian: boolean, price: double)
  +getName(): String
  +getDescription(): String
  +isVegetarian(): boolean
  +getPrice(): double
}

class PancakeHouseMenu {
  -menuItems: ArrayList<MenuItem>
  --
  +PancakeHouseMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +getMenuItems(): ArrayList<MenuItem>
}

class MenuTestDrive {
  +{static} main(args: String[]): void
}

Waitress *-- PancakeHouseMenu
Waitress *-- DinerMenu
Waitress ..> MenuItem
DinerMenu *-- MenuItem
PancakeHouseMenu o-- MenuItem
@enduml